# sb1-pdh51y

./: README.md  package-lock.json  package.json
src/: App.tsx  index.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src/components/: Column.tsx  TaskCard.tsx
